--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Demo
 MRUItem2=/Game/b024899h/ParticleEffectsTest
 MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/Levels/Area2-Market
@@ -281,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Models
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -304,11 +304,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3020,6 +3021,7 @@ REINST_TopDownCharacter_C_163.Rendering=True
 REINST_TopDownCharacter_C_163.Replication=True
 REINST_TopDownCharacter_C_163.Input=True
 REINST_TopDownCharacter_C_163.Actor=True
+BaseAI_C.Drop=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3207,9 +3209,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3358,7 +3360,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/t015548h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4099,7 +4101,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4202,26 +4204,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem2=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem5=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem6=/Game/Josh/Skinned_Player_Skeleton
-MRUItem7=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem8=/Game/Josh/TestRoom/Running_Anim
-MRUItem9=/Game/Josh/1HHumanIdleRun_BP
-MRUItem10=/Game/Josh/HumanAnimBP
-MRUItem11=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem12=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem13=/Game/b024899h/ParticleEffectsTest
-MRUItem14=/Game/c024816h/SmallHealthPotion
-MRUItem15=/Game/GW000979/ItemEnum
-MRUItem16=/Game/Will/Destrucible_Barrel
-MRUItem17=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem18=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem19=/Game/Levels/Area1-Rework
+MRUItem0=/Game/AIAgent/BaseAI
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem3=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem6=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem7=/Game/Josh/Skinned_Player_Skeleton
+MRUItem8=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem9=/Game/Josh/TestRoom/Running_Anim
+MRUItem10=/Game/Josh/1HHumanIdleRun_BP
+MRUItem11=/Game/Josh/HumanAnimBP
+MRUItem12=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem13=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem14=/Game/b024899h/ParticleEffectsTest
+MRUItem15=/Game/c024816h/SmallHealthPotion
+MRUItem16=/Game/GW000979/ItemEnum
+MRUItem17=/Game/Will/Destrucible_Barrel
+MRUItem18=/Game/Models/finishedassets/barrel/LP_barrel
+MRUItem19=/Game/Models/finishedassets/barrel/LP_barrel_DM
 
 [WidgetTemplatesExpanded]
 Extra=False
