patrol system working

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,9 +106,9 @@ CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Area1-Rework
-MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/b024899h/ParticleEffectsTest
 MRUItem5=/Game/Levels/Area2-Market
 MRUItem6=/Game/Levels/texturedzoo
@@ -181,13 +181,13 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
-ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
-BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 UserDefinedStruct=
@@ -256,6 +256,11 @@ HumanAnimBP_C=
 Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+Proto_controller_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+WaypointManager_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+Waypoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+GetNewWayPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+Init=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -309,12 +314,12 @@ LastLevel=/Game/Levels/Demo
 CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
-OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
-OpenAssetsAtExit=/Game/EnemyAgent/EnemyData.EnemyData
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/AIAgent/GetNewWayPoint.GetNewWayPoint
 OpenAssetsAtExit=/Game/AIAgent/WayPoint/WaypointManager.WaypointManager
+OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
+OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
+OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -685,7 +690,7 @@ ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
-EdGraph.Outputs=True
+EdGraph.Outputs=False
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
@@ -3174,6 +3179,16 @@ WaypointManager_C.Rendering=True
 WaypointManager_C.Replication=True
 WaypointManager_C.Input=True
 WaypointManager_C.Actor=True
+WaypointManager_C.TransformCommon=True
+Waypoint_C.TransformCommon=True
+Waypoint_C.Default=True
+FindNewWayPoint_C.Description=True
+FindNewWayPoint_C.Service=True
+GetNewWayPoint_C.Description=True
+GetNewWayPoint_C.Task=True
+GetNewWayPoint_New_C.Default=True
+GetNewWayPoint_New_C.Description=True
+GetNewWayPoint_New_C.Task=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3345,10 +3360,11 @@ None=======
 /Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892=0
 /Game/TopDownBP/Blueprints/SoundManager.SoundManager=1
 /Game/TopDownBP/Blueprints/MainMenuMode.MainMenuMode=1
+/Game/AIAgent/WayPoint/I_WayPoints.I_WayPoints=0
+/Game/AIAgent/FindNewWayPoint.FindNewWayPoint=0
 
 [PluginBrowser]
-InstalledPlugins=DialoguePlugin
-InstalledPlugins=ParticleText
+InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -3358,17 +3374,17 @@ ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[11].KeyType\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[11].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3381,8 +3397,8 @@ BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
-AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+AIController="\"Object.Idle\" \"Object.Idle\" "
+Controller="\"Object.Idle\" \"Object.Idle\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 TopDownCharacter_C=
@@ -3395,7 +3411,7 @@ BotAwareness="\"Struct.tempEnemies\" "
 FindPlayersInRange="\"Struct.TempEnemyArray\" "
 REINST_TestPawn2_C_198="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_212="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Proto_controller_C="\"Object.Default.DebugColour\" "
+Proto_controller_C="\"Object.Idle\" \"Object.Idle\" "
 REINST_TestPawn2_C_269="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_280="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3442,7 +3458,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3485,6 +3501,10 @@ MoviePlayerSettings="\"Object.Movies.StartupMovies\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" "
 BossAI_C="\"Object.Invulnerability\" \"Object.Invulnerability\" "
+WaypointManager_C=
+Waypoint_C=
+GetNewWayPoint_C=
+Init="\"Struct.Start Waypoint\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4304,6 +4324,9 @@ LastLogListing=PIE
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
+RecentlyPlaced=/Game/AIAgent/WayPoint/Waypoint.Waypoint;
+RecentlyPlaced=/Game/AIAgent/WayPoint/WaypointManager.WaypointManager;
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
 RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM;
@@ -4321,9 +4344,6 @@ RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
 RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
 RecentlyPlaced=/Game/Models/weapons/LP_dagger.LP_dagger;
-RecentlyPlaced=/Game/Models/finishedassets/oven/Oven_Unwrapped__1_.Oven_Unwrapped__1_;
-RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart2.equipmentstationpart2;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4376,26 +4396,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/Proto_controller
-MRUItem1=/Game/AIAgent/WayPoint/WaypointManager
-MRUItem2=/Game/AIAgent/WayPoint/Waypoint
-MRUItem3=/Game/AIAgent/BaseAI
-MRUItem4=/Game/AIAgent/I_AI
-MRUItem5=/Game/AIAgent/AttackPlayer
-MRUItem6=/Game/AIAgent/ProtoTree
-MRUItem7=/Game/AIAgent/ProtoAI
-MRUItem8=/Game/AIAgent/BossAI
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem10=/Game/EnemyAgent/CorruptedSlave
-MRUItem11=/Game/EnemyAgent/EnemyData
-MRUItem12=/Game/Levels/Demo
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Chloe/UI/Start_Menu
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/TopDownBP/Blueprints/MainMenuMode
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem18=/Game/TopDownBP/Blueprints/SoundManager
-MRUItem19=/Game/Levels/Area1-Rework
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/AIAgent/GetNewWayPoint_New
+MRUItem2=/Game/AIAgent/AttackPlayer
+MRUItem3=/Game/AIAgent/BTTask_BlueprintBase_New
+MRUItem4=/Game/AIAgent/BTService_BlueprintBase_New
+MRUItem5=/Game/AIAgent/ProtoTree
+MRUItem6=/Game/AIAgent/ProtoAI
+MRUItem7=/Game/Levels/Demo
+MRUItem8=/Game/AIAgent/WayPoint/I_WayPoints
+MRUItem9=/Game/AIAgent/WayPoint/WaypointManager
+MRUItem10=/Game/AIAgent/AIController_I
+MRUItem11=/Game/AIAgent/BaseAI
+MRUItem12=/Game/AIAgent/Proto_controller
+MRUItem13=/Game/AIAgent/WayPoint/Waypoint
+MRUItem14=/Game/AIAgent/I_AI
+MRUItem15=/Game/AIAgent/BossAI
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem17=/Game/EnemyAgent/CorruptedSlave
+MRUItem18=/Game/EnemyAgent/EnemyData
+MRUItem19=/Game/Chloe/UI/Start_Menu
 
 [WidgetTemplatesExpanded]
 Extra=False
