--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Demo
 MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/b024899h/ParticleEffectsTest
@@ -3183,6 +3183,15 @@ GetNewWayPoint_C.Task=True
 GetNewWayPoint_New_C.Default=True
 GetNewWayPoint_New_C.Description=True
 GetNewWayPoint_New_C.Task=True
+REINST_BaseAI_C_193.None=True
+REINST_BaseAI_C_193.Tick=True
+REINST_BaseAI_C_193.Character=True
+REINST_BaseAI_C_193.Camera=True
+REINST_BaseAI_C_193.Pawn=True
+REINST_BaseAI_C_193.Rendering=True
+REINST_BaseAI_C_193.Replication=True
+REINST_BaseAI_C_193.Input=True
+REINST_BaseAI_C_193.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3533,7 +3542,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
