--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,17 +105,18 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/b024899h/ParticleEffectsTest
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Levels/Area2-Market
-MRUItem5=/Game/Levels/texturedzoo
-MRUItem6=/Game/Levels/MechanicsLevel
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem9=/Game/Levels/TerrainMap
-MRUItem10=/Game/Levels/BlockOut
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/b024899h/ParticleEffectsTest
+MRUItem4=/Game/Levels/Area1-Rework
+MRUItem5=/Game/Levels/Area2-Market
+MRUItem6=/Game/Levels/texturedzoo
+MRUItem7=/Game/Levels/MechanicsLevel
+MRUItem8=/Game/Levels/MainMenu
+MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem10=/Game/Levels/TerrainMap
+MRUItem11=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -281,7 +282,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Models
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -304,12 +305,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3225,7 +3225,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller=
+Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 TopDownCharacter_C="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
@@ -3277,7 +3277,7 @@ HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
 BehaviorTreeGraphNode=
 AIGraphNode=
-EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+EdGraphNode=
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3360,7 +3360,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/t015548h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4204,26 +4204,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BaseAI
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem3=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem6=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem7=/Game/Josh/Skinned_Player_Skeleton
-MRUItem8=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem9=/Game/Josh/TestRoom/Running_Anim
-MRUItem10=/Game/Josh/1HHumanIdleRun_BP
-MRUItem11=/Game/Josh/HumanAnimBP
-MRUItem12=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem13=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem14=/Game/b024899h/ParticleEffectsTest
-MRUItem15=/Game/c024816h/SmallHealthPotion
-MRUItem16=/Game/GW000979/ItemEnum
-MRUItem17=/Game/Will/Destrucible_Barrel
-MRUItem18=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem19=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/AIAgent/Proto_controller
+MRUItem2=/Game/AIAgent/ProtoTree
+MRUItem3=/Game/AIAgent/BaseAI
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem9=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem10=/Game/Josh/Skinned_Player_Skeleton
+MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem12=/Game/Josh/TestRoom/Running_Anim
+MRUItem13=/Game/Josh/1HHumanIdleRun_BP
+MRUItem14=/Game/Josh/HumanAnimBP
+MRUItem15=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem16=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem17=/Game/b024899h/ParticleEffectsTest
+MRUItem18=/Game/c024816h/SmallHealthPotion
+MRUItem19=/Game/GW000979/ItemEnum
 
 [WidgetTemplatesExpanded]
 Extra=False
